# msa-ui-gtk

./: CMakeLists.txt  CPackSettings.cmake
extension/: CMakeLists.txt  ExternalObject.cpp  ExternalObject.h  IPCClient.cpp  IPCClient.h  JSUtils.cpp  JSUtils.h  main.cpp
res/: resources.xml
src/: ExtensionIPCServer.cpp  ExtensionIPCServer.h  IPCServer.cpp  IPCServer.h  LoginIPCService.cpp  LoginIPCService.h  MsaDaemonManager.cpp  MsaDaemonManager.h  PickAccountWindow.cpp  PickAccountWindow.h  ProfilePictureManager.cpp  ProfilePictureManager.h  UIThreadExecutor.cpp  UIThreadExecutor.h  WebLoginWindow.cpp  WebLoginWindow.h  WebView.cpp  WebView.h  main.cpp
